--- a/index.html
+++ b/index.html
@@ -1,64 +1,125 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAE Real Estate Explorer</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
-    <link href="https://api.mapbox.com/mapbox-gl-draw/v1.4.3/mapbox-gl-draw.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { margin: 0; padding: 0; overflow: hidden; font-family: system-ui, -apple-system, sans-serif; }
-        #root { height: 100vh; width: 100vw; }
-        
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            font-family: system-ui, -apple-system, sans-serif;
+        }
+
+        #root {
+            height: 100vh;
+            width: 100vw;
+        }
+
         /* Mapbox UI Tweaks */
-        .mapboxgl-ctrl-bottom-right { bottom: 20px !important; right: 20px !important; }
-        .mapboxgl-popup-content { 
-            padding: 0 !important; 
-            border-radius: 12px !important; 
+        .mapboxgl-ctrl-bottom-right {
+            bottom: 20px !important;
+            right: 20px !important;
+        }
+
+        .mapboxgl-popup-content {
+            padding: 0 !important;
+            border-radius: 12px !important;
             overflow: hidden !important;
             background: white !important;
             color: #1e293b !important;
             box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1) !important;
         }
-        .mapboxgl-popup-tip { border-top-color: white !important; border-bottom-color: white !important; }
-        .mapboxgl-ctrl-logo, .mapboxgl-ctrl-attrib { opacity: 0.3; transition: opacity 0.3s; }
-        .mapboxgl-ctrl-logo:hover, .mapboxgl-ctrl-attrib:hover { opacity: 1; }
+
+        .mapboxgl-popup-tip {
+            border-top-color: white !important;
+            border-bottom-color: white !important;
+        }
+
+        .mapboxgl-ctrl-logo,
+        .mapboxgl-ctrl-attrib {
+            opacity: 0.3;
+            transition: opacity 0.3s;
+        }
+
+        .mapboxgl-ctrl-logo:hover,
+        .mapboxgl-ctrl-attrib:hover {
+            opacity: 1;
+        }
 
         /* Custom Scrollbar */
-        .custom-scrollbar::-webkit-scrollbar { width: 6px; }
-        .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
-        .custom-scrollbar::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
-        .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #cbd5e1; }
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: #e2e8f0;
+            border-radius: 10px;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+            background: #cbd5e1;
+        }
 
         /* Hide scrollbar utility */
         .hide-scrollbar {
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
+            -ms-overflow-style: none;
+            /* IE and Edge */
+            scrollbar-width: none;
+            /* Firefox */
         }
+
         .hide-scrollbar::-webkit-scrollbar {
-          display: none; /* Chrome, Safari and Opera */
+            display: none;
+            /* Chrome, Safari and Opera */
         }
 
         /* Custom Animations */
         @keyframes marker-pulse {
-            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7); }
-            70% { transform: scale(1.1); box-shadow: 0 0 0 15px rgba(59, 130, 246, 0); }
-            100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(59, 130, 246, 0); }
+            0% {
+                transform: scale(1);
+                box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7);
+            }
+
+            70% {
+                transform: scale(1.1);
+                box-shadow: 0 0 0 15px rgba(59, 130, 246, 0);
+            }
+
+            100% {
+                transform: scale(1);
+                box-shadow: 0 0 0 0 rgba(59, 130, 246, 0);
+            }
         }
+
         .animate-marker-click {
             animation: marker-pulse 0.5s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         /* Custom Draw Control Styling */
-        .mapboxgl-ctrl-group button.mapbox-gl-draw_polygon { background-size: 18px; }
-        .mapboxgl-ctrl-group button.mapbox-gl-draw_trash { background-size: 18px; }
+        .mapboxgl-ctrl-group button.mapbox-gl-draw_polygon {
+            background-size: 18px;
+        }
+
+        .mapboxgl-ctrl-group button.mapbox-gl-draw_trash {
+            background-size: 18px;
+        }
     </style>
 
 
 </head>
+
 <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
