feat: PSI Maps Pro rebrand, blue color standardization, and Super Admin settings infrastructure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PSI Explorer | Luxury Real Estate</title>
+    <title>PSI Maps Pro | Luxury Real Estate</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.tailwindcss.com"></script>
