ux: Implemented bounding box zoom, dynamic breadcrumbs, removed top gap, and lifted zoom controls

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 
         /* Mapbox UI Tweaks */
         .mapboxgl-ctrl-bottom-right {
-            bottom: 20px !important;
+            bottom: 100px !important;
             right: 20px !important;
+            transform: scale(1.1);
+            transform-origin: bottom right;
         }
 
         .mapboxgl-popup-content {
