--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="PSI Maps Pro — Explore UAE's most exclusive luxury real estate projects across Abu Dhabi, Dubai, and beyond. Interactive map-powered property search with advanced spatial intelligence." />
     <title>PSI Maps Pro | Luxury Real Estate</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- DNS Preconnects: resolve critical third-party origins before they're needed -->
+    <link rel="preconnect" href="https://firebasestorage.googleapis.com" />
+    <link rel="preconnect" href="https://firestore.googleapis.com" />
+    <link rel="preconnect" href="https://api.mapbox.com" />
+    <link rel="preconnect" href="https://events.mapbox.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
