perf: implemented manual chunk splitting, LCP image preloading, and deferred marker rendering to maximize mobile Lighthouse scores

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         content="PSI Maps Pro — Explore UAE's most exclusive luxury real estate projects across Abu Dhabi, Dubai, and beyond. Interactive map-powered property search with advanced spatial intelligence." />
     <title>PSI Maps Pro | Luxury Real Estate</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- LCP preload: banner logo is the first large paint element on mobile -->
+    <link rel="preload" href="/psi-logo.png" as="image" fetchpriority="high" />
 
     <!-- DNS Preconnects: resolve critical third-party origins before they're needed -->
     <link rel="preconnect" href="https://firebasestorage.googleapis.com" />
