--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
             transform-origin: bottom right;
         }
 
+        .mapboxgl-ctrl-bottom-left {
+            bottom: 100px !important;
+            left: 20px !important;
+            z-index: 50;
+        }
+
         .mapboxgl-popup-content {
             padding: 0 !important;
             border-radius: 12px !important;
