fix: restored global settings, fixed presentation db rules, cleaned up CMS, and integrated robust Google Places Autocomplete API

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <link rel="preconnect" href="https://events.mapbox.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://maps.googleapis.com" />
+    <!-- Google Maps JS API with Places library for autocomplete -->
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBq8z2RFkjxDe1Mk9-hkh5xGaAaFNnwRGI&libraries=places"></script>
 
     <style>
         body {
