feat: overhauled mobile experience with native viewport scaling, dynamic customizable footer themes, and bulletproof native button wrappers for map markers to fix unresponsive taps

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="description"
         content="PSI Maps Pro — Explore UAE's most exclusive luxury real estate projects across Abu Dhabi, Dubai, and beyond. Interactive map-powered property search with advanced spatial intelligence." />
     <title>PSI Maps Pro | Luxury Real Estate</title>
